# universal_robot

ur_msgs/: CMakeLists.txt  package.xml
ur_msgs/msg/: MasterboardDataMsg.msg
ur_msgs/srv/: SetPayload.srv
